frontend/src/components/ImageTextSection/ImageTextSection.module.scss
@import "../Theme/theme.scss";

.wrapper {
  display: flex;
  gap: 4rem;
  @include size-s {
    display: block;
  }
  .image {
    img {
      width: 384px;
      height: 480px;
      object-fit: cover;
      border-radius: $border-radius;
    }
  }
  .content {
    width: 100%;
    color: $font;
    @include markdown-styles;
  }
}

